# categorizer

./: .gitignore  README.md  pyproject.toml
src/backend/: pyproject.toml
src/backend/backend/: cache_layer.py  main.py  parser.py
src/frontend/: index.html  package.json
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/pages/: AllSites.tsx  MainPage.tsx
src/frontend/src/services/: api.ts
src/frontend/src/ui/: Logo.tsx
src/frontend/src/widgets/: AppBar.tsx  LinkForm.tsx  Stars.tsx  VideoCard.tsx
src/ml-backend/: nlp_model.py
src/ml_backend/: pyproject.toml
src/ml_backend/ml_backend/: nlp_model.py
src/ml_backend/ml_backend/weights/: LabelEncoder.pkl  TfidfVectorizer.pkl
