[tool.poetry]
name = "categorizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
fastapi = "^0.105.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
pandas = "^2.1.4"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.23"
nltk = "^3.8.1"
regex = "^2023.12.25"
scikit-learn = "^1.3.2"

ml_backend = {path = "./src/ml_backend/"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
